@@ -36,8 +36,8 @@ public class SolrClientFactory {
   public Http2SolrClient createStandaloneSolrClient(String solrHost) {
     Http2SolrClient http2SolrClient =
         new Http2SolrClient.Builder(solrHost)
-            .idleTimeout(settings.getHttpReadTimeout())
-            .connectionTimeout(settings.getHttpConnectionTimeout())
+            .withIdleTimeout(settings.getHttpReadTimeout())
+            .withConnectionTimeout(settings.getHttpConnectionTimeout())
             .withResponseParser(new NoOpResponseParser("json"))
             .build();
 
@@ -55,8 +55,8 @@ public class SolrClientFactory {
                 Optional.ofNullable(parser.getChrootPath()))
             .withInternalClientBuilder(
                 new Http2SolrClient.Builder()
-                    .idleTimeout(settings.getHttpReadTimeout())
-                    .connectionTimeout(settings.getHttpConnectionTimeout()))
+                    .withIdleTimeout(settings.getHttpReadTimeout())
+                    .withConnectionTimeout(settings.getHttpConnectionTimeout()))
             .withResponseParser(new NoOpResponseParser("json"))
             .build();
 
