@@ -292,16 +292,41 @@ public class CloudHttp2SolrClient extends CloudSolrClient {
      * number of locks.
      *
      * <p>Defaults to 3.
+     *
+     * @deprecated Please use {@link #withParallelCacheRefreshes(int)}
      */
+    @Deprecated(since = "9.2")
     public Builder setParallelCacheRefreshes(int parallelCacheRefreshesLocks) {
+      this.withParallelCacheRefreshes(parallelCacheRefreshesLocks);
+      return this;
+    }
+
+    /**
+     * When caches are expired then they are refreshed after acquiring a lock. Use this to set the
+     * number of locks.
+     *
+     * <p>Defaults to 3.
+     */
+    public Builder withParallelCacheRefreshes(int parallelCacheRefreshesLocks) {
       this.parallelCacheRefreshesLocks = parallelCacheRefreshesLocks;
       return this;
     }
 
     /**
      * This is the time to wait to refetch the state after getting the same state version from ZK
+     *
+     * @deprecated Please use {@link #withRetryExpiryTime(int)} *
      */
+    @Deprecated(since = "9.2")
     public Builder setRetryExpiryTime(int secs) {
+      this.withRetryExpiryTime(secs);
+      return this;
+    }
+
+    /**
+     * This is the time to wait to refetch the state after getting the same state version from ZK
+     */
+    public Builder withRetryExpiryTime(int secs) {
       this.retryExpiryTime = TimeUnit.NANOSECONDS.convert(secs, TimeUnit.SECONDS);
       return this;
     }
